tests/run-pass/conf_unknown_key.rs
#![feature(plugin)]
#![plugin(clippy(conf_file="./tests/run-pass/conf_unknown_key.toml"))]

fn main() {}
